@startuml
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "Domain Entities (Conceptual)" {
  class User {
    +id: int
    +email: str
    +password_hash: str
    +full_name: str
    +role: str
    +security_question: str
    +security_answer_hash: str
    +created_at: datetime
    +updated_at: datetime
  }

  class Room {
    +id: int
    +room_number: str
    +room_name: str
    +room_type: str
    +price_per_night: float
    +max_guests: int
    +status: str
    +description: str
    +image_url: str
    +floor: str
    +wing: str
  }

  class Customer {
    +id: int
    +user_id: int?
    +full_name: str
    +email: str
    +phone: str
    +id_card: str
    +nationality: str
    +tier: str
    +total_spent: float
    +total_bookings: int
    +status: str
  }

  class Booking {
    +id: int
    +booking_code: str
    +customer_id: int
    +room_id: int
    +check_in_date: date
    +check_out_date: date
    +num_guests: int
    +status: str
    +total_amount: float
    +notes: str
  }

  class Payment {
    +id: int
    +booking_id: int
    +amount: float
    +payment_method: str
    +status: str
    +payment_date: datetime
    +transaction_ref: str
  }
}

package "Infrastructure" {
  class DatabaseManager {
    +get_connection(): Connection
    +init_db(): None
    +execute(query, params): Cursor
    +fetch_one(query, params): dict?
    +fetch_all(query, params): list[dict]
    +insert(query, params): int
    +execute_many(query, params_list): None
    +count(query, params): int
  }

  class AppFactory {
    +create_app(config_name): Flask
  }
}

package "Model Services" {
  class UserModel {
    +create(...)
    +find_by_email(email)
    +find_by_id(user_id)
    +verify_password(hash, password)
    +verify_security_answer(hash, answer)
    +update_password(user_id, new_password)
    +get_all(role)
  }

  class RoomModel {
    +create(...)
    +find_by_id(room_id)
    +find_by_number(room_number)
    +get_all(status, room_type)
    +update(room_id, **kwargs)
    +delete(room_id)
    +update_status(room_id, status)
    +get_status_summary()
  }

  class CustomerModel {
    +create(...)
    +find_by_id(customer_id)
    +find_by_email(email)
    +find_by_user_id(user_id)
    +get_paginated(page, per_page, search)
    +get_all()
    +update(customer_id, **kwargs)
    +delete(customer_id)
    +calculate_tier(total_spent, total_bookings)
    +update_after_checkout(customer_id, amount)
    +get_stats()
  }

  class BookingModel {
    +check_overlap(room_id, check_in, check_out)
    +create(...)
    +checkout_booking(booking_id, payment_method)
    +find_by_id(booking_id)
    +get_all(status, search)
    +get_recent(limit)
    +update_status(booking_id, new_status)
    +get_pending_count()
    +get_today_checkins()
    +calculate_total(price_per_night, check_in, check_out)
  }

  class PaymentModel {
    +create(booking_id, amount, payment_method)
    +create_refund(booking_id, amount)
    +get_by_booking(booking_id)
    +get_recent(limit, start_date, end_date)
    +get_total_revenue(start_date, end_date)
    +get_today_revenue()
    +get_revenue_by_room_type(start_date, end_date)
  }
}

package "Controller Modules / Blueprints" {
  class auth_bp <<Blueprint>>
  class dashboard_bp <<Blueprint>>
  class rooms_bp <<Blueprint>>
  class bookings_bp <<Blueprint>>
  class customers_bp <<Blueprint>>
  class reports_bp <<Blueprint>>
}

UserModel ..> DatabaseManager
RoomModel ..> DatabaseManager
CustomerModel ..> DatabaseManager
BookingModel ..> DatabaseManager
PaymentModel ..> DatabaseManager

auth_bp ..> UserModel
auth_bp ..> CustomerModel

dashboard_bp ..> RoomModel
dashboard_bp ..> BookingModel
dashboard_bp ..> PaymentModel

rooms_bp ..> RoomModel
customers_bp ..> CustomerModel

bookings_bp ..> BookingModel
bookings_bp ..> RoomModel
bookings_bp ..> CustomerModel
bookings_bp ..> PaymentModel

reports_bp ..> PaymentModel
reports_bp ..> RoomModel
reports_bp ..> DatabaseManager

AppFactory ..> auth_bp
AppFactory ..> dashboard_bp
AppFactory ..> rooms_bp
AppFactory ..> customers_bp
AppFactory ..> bookings_bp
AppFactory ..> reports_bp
AppFactory ..> DatabaseManager

note right of AppFactory
  create_app() currently:
  - initializes database
  - registers blueprints
  - applies CSRF validation
  - injects template globals and filters
end note

note right of Customer
  In the current implementation,
  user_id is optional.
  Admin-created customers may exist
  without a linked user account.
end note

User "0..1" <-- "0..*" Customer : optional link by user_id
Customer "1" <-- "0..*" Booking : customer_id
Room "1" <-- "0..*" Booking : room_id
Booking "1" <-- "0..*" Payment : booking_id

@enduml
